# gguf2mlx

./: .gitignore  README.md  UV_SETUP.md  convert_gguf_to_mlx.py  demo.py  demo1.py  demo2shimmy.py  demo2transformers.py  demo2unsloth.py  design.md  gguf2mlx.py  lm_studio_helper.py  lms_cli.py  mlx_to_gguf.py  output1.txt  output2.txt  output3.txt  pyproject.toml  requirements.txt  test_fixed_output.txt  test_output.txt
src/gguf2mlx/: __init__.py  gguf2mlx.py
tests/: test_convert_gguf_to_mlx.py  test_gguf2mlx.py  test_lm_studio_helper.py  test_lms_cli.py  test_mlx_to_gguf.py
