[project]
name = "gguf2mlx"
version = "1.0.0"
description = "Convert GGUF models to MLX format for Apple Silicon optimization"
authors = [
    {name = "GGUF2MLX Team", email = "team@gguf2mlx.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mlx", "gguf", "apple-silicon", "machine-learning", "model-conversion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core ML Framework - Apple Silicon optimized
    "mlx>=0.29.1",
    
    # Numerical computing foundation
    "numpy>=2.3.0",
    
    # PyTorch ecosystem - ARM64 optimized
    "torch>=2.8.0",
    "torchvision>=0.23.0", 
    "torchaudio>=2.8.0",
    
    # Hugging Face ecosystem
    "transformers>=4.56.0",
    "tokenizers>=0.22.0",
    "safetensors>=0.6.0",
    "huggingface-hub>=0.34.0",
    
    # JAX ecosystem for functional programming
    "jax>=0.7.1",
    "jaxlib>=0.7.1",
    "flax>=0.11.2",
    "optax>=0.2.5",
    
    # Scientific computing
    "scipy>=1.16.0",
    "ml-dtypes>=0.5.0",
    
    # Utilities
    "tqdm>=4.67.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "packaging>=25.0",
    "filelock>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

unsloth = [
    # Commented out due to build issues on Apple Silicon
    # "unsloth>=2024.1",
]

[project.urls]
Homepage = "https://github.com/your-org/gguf2mlx"
Repository = "https://github.com/your-org/gguf2mlx.git"
Documentation = "https://github.com/your-org/gguf2mlx/blob/main/README.md"
"Bug Tracker" = "https://github.com/your-org/gguf2mlx/issues"

[project.scripts]
gguf2mlx = "gguf2mlx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true